Add AI sugesstions